# webrtcStreamer

./: CMakeLists.txt  README.md  draft.txt
src/: VideoProducer.cpp  VideoProducer.h  WebRTCStreamer.cpp  WebRTCStreamer.h  main.cpp  native2webrtc.cpp
src/draft/: helpers.hpp  main.cpp  stream.cpp  stream.hpp  wsserver.cpp
src/utils/: BlockingQueue.h  SafeUMap.h
